--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinkit": "^3.0.0",
     "styled-components": "^5.3.0"
   },
   "scripts": {
